<resources>
    <string name="rjy">Rajahmundry</string>
    <string name="app_name">RJY-TourApp</string>
    <string name="restaurant">restaurants </string>
    <string name="temples">temples</string>
    <string name="park">parks</string>
    <string name="famous">RJY is famous for....</string>
    <string name="sri">Sri Kanya Comfort Restaurant"</string>
    <string name="sriAddress">Address : Beside Reliance Mart, Seshayya Metta, East Godavari, Rajahmundry, Andhra Pradesh 533101</string>
    <string name="sriPhone">Phone : 0883 256 6666</string>
    <string name="Green">Green park Family Restaurant</string>
    <string name="GreenAddres">Address : Near Aditya Junior College, Round Park Road, Danavaipet, Rajahmundry, Andhra Pradesh 533103</string>
    <string name="GreenPhone">Phone : 0883 246 7525</string>
    <string name="J.K">J.K Restaurant</string>
    <string name="J.KAddress">Address : Kumari Talkies Road, T Nagar, Rajahmundry, Andhra Pradesh 533101</string>
    <string name="J.KPhone">Phone : 0883 243 5698</string>
    <string name="Sai">Sai Priyanka Multicuisine Restaurant</string>
    <string name="SaiAddress">Address : A.V. Appa Roa Road, Gandhipuram 3, Syamala Nagar, Near Gauthami School, Rajahmundry, Andhra Pradesh 533101</string>
    <string name="SaiPhone">Phone : 0883 243 6900</string>
    <string name="ISKCON">ISKCON Temple</string>
    <string name="ISKCONAddress">Address : Hare Krishna Land, Gowthami Ghat, Rajahmundry, Andhra Pradesh 533101</string>
    <string name="ISKCONPhone">Phone : 0883 244 2277</string>
    <string name="Swamy">Sri Sitarama Swamy Temple</string>
    <string name="SwamyAddress">Address : Kotilingala Veedhi, Seethampet, Rajahmundry, Andhra Pradesh 533104</string>
    <string name="SwamyPhone">Phone : 089857 95831</string>
    <string name="Syamalamba">Syamalamba Temple</string>
    <string name="SyamalambaAddress">Address : Raithu Nagar, Kothapeta, Rajahmundry, Andhra Pradesh 533101</string>
    <string name="SyamalambaPhone">Phone : 099663 36065</string>
    <string name="Markandeya">Sri Markandeya Swamy Temple</string>
    <string name="MarkandeyaAddress">Address: Godavari Bund Rd, Mangalavaripeta, Rajahmundry, Andhra Pradesh 533101</string>
    <string name="MarkandeyaPhoe">Phone : 093263 59761</string>
    <string name="Kambala">Kambala Park</string>
    <string name="KambalaAddress">Address : Kambala Park Rd, Kambala Cheruvu, Rajahmundry, Andhra Pradesh 533101</string>
    <string name="KambalaPhone">Phone : 092749 29845</string>
    <string name="Kohinoor">Kohinoor Park</string>
    <string name="KohinoorAddress">Behind St.Anns School, Netaji Nagar, Rajahmundry, Andhra Pradesh 533101</string>
    <string name="KohinoorPhone">Phone : 099294 34393</string>
    <string name="Jaya">Jaya Krishna Puram Park</string>
    <string name="JayaAddess">Konthamuru, Rajahmundry, Andhra Pradesh 533105</string>
    <string name="JayaPhone">Phone : 099663 37594</string>
    <string name="RiverBay">River Bay</string>
    <string name="RiverBayAddress">ddress : Tyagaraja Nagar, Rajahmundry, Andhra Pradesh 533101</string>
    <string name="RiverBayPhone">Phone : 0883 244 7006</string>
    <string name="PushkarGhat">Pushkar Ghat</string>
    <string name="PushkarGhatAddress">Address : Seshayya Metta, Rajahmundry, Andhra Pradesh 533101</string>
    <string name="PushkarGhatPhone">Phone : 0883 231 2479</string>
    <string name="CottonMuseum">Cotton Museum</string>
    <string name="CottonMuseumAddress">Dowlaiswaram , Vijjeswaram Rd, Cotton Peta, Dowlaiswaram, Rajahmundry, Andhra Pradesh 533125</string>
    <string name="CottonMuseumPhone">Phone : 0883 344 8509</string>
</resources>
